[gd_scene load_steps=9 format=3 uid="uid://bqnrhvv38trp2"]

[ext_resource type="Script" path="res://scripts/ui/win.gd" id="1_ih5h8"]
[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="1_niw1x"]
[ext_resource type="Texture2D" uid="uid://ct5st7mn8liks" path="res://assets/sprite/83f7143eb2a9ee74579cc614de4fcd9a.png" id="2_8jh0a"]

[sub_resource type="Animation" id="Animation_f75qk"]
resource_name = "1_start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3iydk"]
resource_name = "2_start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bxcdr"]
resource_name = "3_start"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3tfhe"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_te8s4"]
_data = {
"1_start": SubResource("Animation_f75qk"),
"2_start": SubResource("Animation_3iydk"),
"3_start": SubResource("Animation_bxcdr"),
"RESET": SubResource("Animation_3tfhe")
}

[node name="UI_win" type="CanvasLayer"]
visible = false
script = ExtResource("1_niw1x")

[node name="WIN" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ih5h8")

[node name="ColorRect" type="ColorRect" parent="WIN"]
layout_mode = 0
offset_left = 37.0
offset_top = 158.0
offset_right = 1114.0
offset_bottom = 580.0

[node name="Label" type="Label" parent="WIN"]
layout_mode = 0
offset_left = 309.0
offset_top = 169.0
offset_right = 888.0
offset_bottom = 246.0
theme_override_colors/font_color = Color(0.623529, 0.792157, 0.2, 1)
theme_override_font_sizes/font_size = 56
text = "Ты привез .. камней"

[node name="buttonRestart" type="Button" parent="WIN"]
layout_mode = 0
offset_left = 102.0
offset_top = 370.0
offset_right = 452.0
offset_bottom = 462.0
theme_override_font_sizes/font_size = 61
text = "restart"

[node name="buttonNextLvl" type="Button" parent="WIN"]
layout_mode = 0
offset_left = 730.0
offset_top = 371.0
offset_right = 1080.0
offset_bottom = 463.0
theme_override_font_sizes/font_size = 61
text = "next lvl"

[node name="buttonGoToMenu" type="Button" parent="WIN"]
layout_mode = 0
offset_left = 404.0
offset_top = 474.0
offset_right = 748.0
offset_bottom = 566.0
theme_override_font_sizes/font_size = 61
text = "main menu"

[node name="stars" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="stars"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 412.0
offset_top = 247.0
offset_right = 533.0
offset_bottom = 359.0
texture = ExtResource("2_8jh0a")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="stars"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 539.0
offset_top = 247.0
offset_right = 660.0
offset_bottom = 359.0
texture = ExtResource("2_8jh0a")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="stars"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 666.0
offset_top = 247.0
offset_right = 787.0
offset_bottom = 359.0
texture = ExtResource("2_8jh0a")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="stars"]
libraries = {
"": SubResource("AnimationLibrary_te8s4")
}

[connection signal="pressed" from="WIN/buttonRestart" to="WIN" method="_on_button_restart_pressed"]
[connection signal="pressed" from="WIN/buttonNextLvl" to="WIN" method="_on_button_next_lvl_pressed"]
[connection signal="pressed" from="WIN/buttonGoToMenu" to="WIN" method="_on_button_go_to_menu_pressed"]
